runit (0.9.0-1) unstable; urgency=low

  * new upstream version.
  * debian/rules: minor cleanup.

 -- Gerrit Pape <pape@smarden.org>  Thu, 24 Apr 2003 15:58:34 +0200

runit (0.8.4-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Sun, 20 Apr 2003 19:34:37 +0200

runit (0.8.1-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Wed, 12 Mar 2003 15:10:16 +0100

runit (0.8.0-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Tue, 25 Feb 2003 16:17:46 +0100

runit (0.7.2-2) unstable; urgency=low

  * debian/rules: resurrect copyright file.

 -- Gerrit Pape <pape@smarden.org>  Wed, 29 Jan 2003 19:29:33 +0100

runit (0.7.2-1) unstable; urgency=low

  * new upstream version.
  * debian/rules: do not install /etc/runit/{1,2,3,ctrlaltdel} (now
    included in the runit-run package); install docs without
    dh_installdocs.
  * debian/control: Standards-Version: 3.5.8.
  * debian/runit.docs: remove.

 -- Gerrit Pape <pape@smarden.org>  Wed, 29 Jan 2003 14:30:33 +0100

runit (0.7.1-5) unstable; urgency=low

  * debian/3: stop getties after all other services.
  * debian/control: Architecture: any, build dependency sorts out;
    build-depends on dietlibc >> 0.22-0 (available on ia64).
  * debian/rules: use dh_installdocs -n.
  * debian/runit.preinst: remove #DEBHELPER#.

 -- Gerrit Pape <pape@smarden.org>  Thu,  5 Dec 2002 22:17:18 +0100

runit (0.7.1-4) unstable; urgency=low

  * debian/rules: install debian specific stage 3: fix path to service
    directory.
  * debian/3: new.

 -- Gerrit Pape <pape@smarden.org>  Thu,  7 Nov 2002 18:33:52 +0100

runit (0.7.1-3) unstable; urgency=low

  * debian/control: build-depends on dietlibc >= 0.21-3 (fixes build
    failure on mips/mipsel).
  * debian/rules: debian/1: new.

 -- Gerrit Pape <pape@smarden.org>  Sun,  3 Nov 2002 23:20:23 +0100

runit (0.7.1-2) unstable; urgency=low
